# voice-assistant

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  run.py  voice_assistant.spec
.beads/: issues.jsonl
scripts/: create_app.sh
src/voice_assistant/: __init__.py  app.py  main.py
src/voice_assistant/config/: settings.py  user_config.py
src/voice_assistant/core/: __init__.py  audio_recorder.py  model_manager.py  transcriber.py  translator.py
src/voice_assistant/hotkeys/: manager.py
src/voice_assistant/ui/: __init__.py  main_window.py  settings_dialog.py
src/voice_assistant/workers/: __init__.py  download_worker.py  transcription_worker.py  translation_worker.py
